# OWS-4300

./: CMakeLists.txt  config.txt  main.cpp
include/Actors/: Actor.h  Circle.h  Rectangle.h  ShapeActor.h
include/Config/: ConfigManager.h  ConfigTypes.h
src/Actors/: Circle.cpp  Rectangle.cpp  ShapeActor.cpp
src/Config/: ConfigManager.cpp
